blocks/header/header.css
/* ... */
/* brand */
header nav .nav-brand a {
  grid-area: brand;
  flex-basis: 128px;
  font: var(--type-headline-1-font);
  letter-spacing: var(--type-headline-1-letter-spacing);
}

li.nav-drop img {
  max-width: var(--megamenu-item-width);
  width: 100%;
  height: auto;
  object-fit: contain;
}

header nav .nav-brand img {
  width: 128px;
  height: auto;
}

/* sections */
header nav .nav-sections {
  grid-area: sections;
  flex: 1 1 auto;
  display: none;
  visibility: hidden;
}

header nav[aria-expanded='true'] .nav-sections {
  display: block;
  visibility: visible;
  align-self: start;
}

header nav .nav-sections ul {
  list-style: none;
  padding-left: 0;
  font: var(--type-body-1-default-font);
  letter-spacing: var(--type-body-1-default-letter-spacing);
}

header nav .nav-sections ul > li,
header nav .nav-sections ul > li > a {
  font-weight: 500;
}

header nav .nav-sections ul > li > ul {
  margin-top: 0;
}

header nav .nav-sections ul > li > ul > li {
  font-weight: 400;
}

@media (width >= 900px) {
  header nav .nav-sections {
    display: block;
    visibility: visible;
    white-space: nowrap;
  }

  header nav[aria-expanded='true'] .nav-sections {
    align-self: unset;
  }

  header nav .nav-sections .nav-drop {
    position: relative;
    padding: 0 16px;
    cursor: pointer;
    border-radius: 4px;
  }

  header nav .nav-sections .nav-drop[aria-expanded='true'] {
    background-color: var(--color-neutral-200);
  }

  header nav .nav-sections ul {
    display: flex;
    gap: 24px;
    margin: 0;
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul {
    display: none;
    position: relative;
  }

  header nav .nav-sections .nav-drop[aria-expanded='true'] > ul {
    height: var(--megamenu-panel-height);
    flex-flow: column wrap;
  }


  header nav .nav-sections .default-content-wrapper > ul > li {
    flex: 0 1 auto;
    position: relative;
  }

  /* This is the style for the dropdown */
  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
    display: flex;
    position: absolute;
    left: -24px;
    width: var(--megamenu-panel-width);
    top: 150%;
    padding: 16px;
    background-color: var(--color-neutral-50);
    white-space: initial;
    overflow-x: scroll;
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
    content: '';
    position: absolute;
    top: -8px;
    left: 16px;
    width: 0;
    height: 0;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-bottom: 8px solid var(--color-neutral-500);
  }

  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
    padding: 8px 0;
  }
}

/* tools */
header nav .nav-tools-panel {
  z-index: 100;
  position: absolute;
  box-shadow: var(--shape-shadow-2);
  background: var(--background-color);
  top: var(--nav-height);
  right: 0;
  width: 100%;
  display: none;
  box-sizing: border-box;
}

header nav .nav-tools-panel--show {
  display: block;
}

header nav .nav-tools {
  grid-area: tools;
  display: flex;
  height: 100%;
  gap: var(--spacing-small);
  align-items: center;
}

header nav .nav-tools-wrapper > button {
  color: var(--color-brand-700);
  background: transparent;
  padding: 10px;
  border: unset;
  cursor: pointer;
  height: 40px;
  width: 40px;
}

header nav .nav-tools button.nav-cart-button {
  background-image: url('../../icons/cart.svg');
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
}

header nav .nav-tools button.nav-cart-button[data-count]::after {
  content: attr(data-count);
  position: absolute;
  top: 0;
  right: -2px;
  background-color: var(--color-brand-700);
  color: var(--color-neutral-100);
  border-radius: 50%;
  width: 1.75em;
  height: 1.75em;
  display: flex;
  align-items: center;
  font-size: 0.8em;
  justify-content: center;
}

header nav .nav-tools button.nav-search-button {
  font-size: 0;
  background-image: url('../../icons/search.svg');
  background-repeat: no-repeat;
  background-position: center;
}

header .nav-search-panel {
  padding: var(--spacing-small);
}

header .nav-search-panel input {
  width: 100%;
  padding: 10px;
  box-sizing: border-box;
  font: var(--type-headline-2-default-font);
  letter-spacing: var(--type-headline-2-default-letter-spacing);
  border: 1px solid currentcolor;
  appearance: none;
}

/* Mini Cart  */

.cart-mini-cart:not(:has(.cart-empty-cart)) {
  max-height: 760px;
  min-height: 360px;
}

/* If viewport height is below max, set max height to 90% of viewport */
@media (height < 820px) {
  .cart-mini-cart:not(:has(.cart-empty-cart)) {
    max-height: calc(100vh - var(--nav-height));
  }
}

header .nav-search-input .search_autocomplete .popover-container {
  width: 100%;
}

@media (width >= 1024px) {
  header nav .nav-tools-wrapper {
    position: relative;
  }

  header nav .nav-tools-panel {
    top: calc(-12px + var(--nav-height));
  }

  header nav .minicart-panel {
    width: 398px;
  }

  header nav .nav-search-panel {
    width: 398px;
  }
}

/* CSS for authCombine */
#auth-combine-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0 0 0 / 50%);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
  overflow-y: auto;
  padding: 10px 0;
  box-sizing: border-box;
}

#auth-combine-wrapper {
  background-color: white;
  border-radius: var(--shape-border-radius-2);
  width: 100%;
  max-width: 800px;
  min-height: max-content;
  margin: 0 10px;
  box-sizing: border-box;
  max-height: 90vh;
  overflow-y: auto;

  @supports (height: 90svh) {
    max-height: 90svh;
  }
}
/* ... */

